--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "helmet": "^6.0.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pocketbase": "^0.11.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
