--- a/deploy/secret.yaml
+++ b/deploy/secret.yaml
@@ -5,6 +5,6 @@ metadata:
   namespace: swh
 type: Opaque
 data:
-  username: d2VhdGhlcnN0YXRpb24= #weatherstation
-  password: cGVxcnp6RGtYNXZDUDNHUQ== # peqrzzDkX5vCP3GQ
-  PW: c2VjUFcxMjM0NTZWZXJ5U2VjdXJlV2VhdGhlclN0YXRpb25QYXNzd29yZA== #secPW123456VerySecureWeatherStationPassword
+  username: d2VhdGhlcnN0YXRpb24= 
+  password: cGVxcnp6RGtYNXZDUDNHUQ==
+  PW: c2VjUFcxMjM0NTZWZXJ5U2VjdXJlV2VhdGhlclN0YXRpb25QYXNzd29yZA== 
